# ucup-nearai-2025

./: README.md
agent/: agent.py  metadata.json  ucup_tokens.py
contract/: main.py  main.wasm  pyproject.toml
