[project]
name = "contract"
version = "0.1.0"
description = "Helper contract for NEAR AI demo for UCUP 2025"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["near-sdk-py>=0.5.0"]

[project.urls]
repository = "https://github.com/frol/ucup-nearai-2025"

[tool.near.reproducible_build]
image = "ghcr.io/r-near/nearc:main"
image_digest = "sha256:b4bcb912a921746b84fab2d469443ecbf2f51e089e6210d30992eb7ff8ce869a"
container_build_command = [
    "nearc",
]
